docker-compose.kompose/templates/prometheus-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.kompose.yml --chart
    kompose.service.expose: prometheus.example.com
    kompose.service.type: loadbalancer
    kompose.version: 1.18.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: prometheus
  name: prometheus
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: prometheus
    spec:
      containers:
      - args:
        - --config.file=/etc/prometheus/prometheus.yml
        image: prom/prometheus:latest
        name: prometheus
        ports:
        - containerPort: 9090
        resources: {}
        volumeMounts:
        - mountPath: /etc/prometheus/prometheus.yml
          name: prometheus-claim0
          readOnly: true
        - mountPath: /prometheus
          name: prometheus-data
      restartPolicy: Always
      volumes:
      - name: prometheus-claim0
        persistentVolumeClaim:
          claimName: prometheus-claim0
          readOnly: true
      - name: prometheus-data
        persistentVolumeClaim:
          claimName: prometheus-data
status: {}
