docker-compose.kompose/templates/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.kompose.yml --chart
    kompose.service.expose: grafana.example.com
    kompose.service.type: loadbalancer
    kompose.version: 1.18.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: grafana
  name: grafana
spec:
  ports:
  - name: "3000"
    port: 3000
    targetPort: 3000
  selector:
    io.kompose.service: grafana
  type: LoadBalancer
status:
  loadBalancer: {}
