docker-compose.kompose/templates/server-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: server
  name: server
spec:
  rules:
  - host: fraugsterserver.example.com
    http:
      paths:
      - backend:
          serviceName: server
          servicePort: 8000
status:
  loadBalancer: {}
